<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.Magnífica.DayNight.Background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.AddressActivity">

    <TextView
        android:id="@id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/suas_informa_es"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="16dp"
        style="@style/Theme.Magnífica.DayNight.CardView"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintBottom_toTopOf="@id/button_save_inf">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/button_save_inf"
        app:layout_constraintTop_toBottomOf="@id/title">

        <EditText
            android:id="@+id/nome_inf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:autofillHints="name"
            android:hint="@string/nome"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/telefone_inf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:autofillHints="phone"
            android:hint="@string/telefone"
            android:inputType="phone" />

        <EditText
            android:id="@+id/endereco_inf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:autofillHints="address"
            android:hint="@string/endere_o"
            android:inputType="text" />

        <EditText
            android:id="@+id/complemento_inf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:autofillHints="none"
            android:hint="@string/complemento"
            android:inputType="text" />

        <EditText
            android:id="@+id/numero_inf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:autofillHints="number"
            android:hint="@string/n_mero"
            android:inputType="number" />

        <EditText
            android:id="@+id/bairro_inf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:autofillHints="none"
            android:hint="@string/bairro"
            android:inputType="text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:enabled="false"
            android:inputType="none"
            android:autofillHints="none"
            android:text="@string/brumado_ba" />

    </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/button_save_inf"
        style="@style/Theme.Magnífica.DayNight.FButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:text="@string/salvar"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>