<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.Magnífica.DayNight.Background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.CompleteActivity">

    <LinearLayout
        android:id="@+id/pedido_realizado_l"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@color/color_1"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:src="@drawable/ic_check_circle"
            app:tint="@color/white"
            android:contentDescription="@string/imagem_de_confirma_o" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/pedido_realizado"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/retirar_pedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/como_retirar_o_pedido"
            android:layout_gravity="center"
            android:textAlignment="center"
           android:backgroundTint="@color/white"
            android:textColor="@color/color_1"
            android:textStyle="italic"
            android:layout_marginTop="50dp"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_complete"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/button_tela_inicial"
        app:layout_constraintTop_toBottomOf="@id/pedido_realizado_l" />

    <Button
        android:id="@+id/button_tela_inicial"
        style="@style/Theme.Magnífica.DayNight.FButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/voltar_a_tela_inicial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>